change the link

--- a/html/main.html
+++ b/html/main.html
@@ -2,11 +2,11 @@
 <html>
 
 <frameset cols="15%,*">
-  <frame src="column.html">
+  <frame src="https://github.com/CSCI-3100-Group40-Teamder/Init_Code/blob/master/html/column.html">
 
 <frameset rows="10%,*">
-  	<frame src="logo.html">
-	<frame src="all.html" name="frame3">
+  	<frame src="https://github.com/CSCI-3100-Group40-Teamder/Init_Code/blob/master/html/logo.html">
+	<frame src="https://github.com/CSCI-3100-Group40-Teamder/Init_Code/blob/master/html/all.html" name="frame3">
 
 </frameset>
 
